Feat : Ride Service Implemented
